# Infantry-vision

./: README.md
energy_rm_serial_driver/: README.md
energy_rm_serial_driver/include/rm_serial_driver/: packet.hpp  rm_serial_driver.hpp
energy_rm_serial_driver/src/: rm_serial_driver.cpp
new_en_detector/: .gitignore  README.md
new_en_detector/auto_aim_interfaces/: CMakeLists.txt
new_en_detector/auto_aim_interfaces/msg/: DebugLeaf.msg  DebugLeafs.msg  EnTarget.msg  Leaf.msg  Leafs.msg
new_en_detector/auto_aim_interfaces/srv/: TrackingMode.srv
new_en_detector/energy_detector/: CMakeLists.txt  package.xml
new_en_detector/energy_detector/include/energy_detector/: En_detector.hpp  Leaf.hpp  energy_detector_node.hpp  pnp_solver.hpp
new_en_detector/energy_detector/models/: best.xml  energy.xml  leaf416_planc.txt  leaf416_planc.xml  leaf416_planc_500.xml  leaf416_planc_disable1.xml
new_en_detector/energy_detector/src/: En_detector.cpp  energy_detector_node.cpp  pnp_slover.cpp
new_en_detector/energy_detector/test/: test_node_video.cpp
new_en_detector/energy_tracker/: CMakeLists.txt  package.xml
new_en_detector/energy_tracker/include/energy_tracker/: energy_extended_kalman_filter.hpp  energy_tracker.hpp  energy_tracker_node.hpp
new_en_detector/energy_tracker/src/: energy_extended_kalman_filter.cpp  energy_tracker.cpp  energy_tracker_node.cpp
ros_ws/src/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
ros_ws/src/rm_serial_driver/include/rm_serial_driver/: packet.hpp
ros_ws/src/rm_serial_driver/src/: rm_serial_driver.cpp
ros_ws/src/rm_vision/: README.md
ros_ws/src/rm_vision/rm_vision_bringup/config/: camera_info.yaml  launch_params.yaml  node_params.yaml
ros_ws/src/ros2_mindvision_camera/config/: camera_params.yaml
